fixed results and operations, add operation and answer panels

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="calcContainer">
             <div class="glass">
                 <div class="answerPanel">
+                   
                     
                 </div>
 
@@ -28,42 +29,42 @@
 
                 <div class="buttonPanel">
                     <div class="buttonRow">
-                        <button class="material-symbols-outlined calcButton">
+                        <button class="material-symbols-outlined calcButton action">
                         backspace
                         </button>
 
-                        <button class="calcButton">C</button>
+                        <button class="calcButton action clear">C</button>
                         <button class="calcButton operator">%</button>
                         <button class="calcButton operator">/</button>
 
                     </div>
 
                     <div class="buttonRow">
-                        <button class="calcButton">7</button>
-                        <button class="calcButton">8</button>
-                        <button class="calcButton">9</button>
+                        <button class="calcButton number">7</button>
+                        <button class="calcButton number">8</button>
+                        <button class="calcButton number">9</button>
                         <button class="calcButton operator">x</button>
                     </div>
 
                     <div class="buttonRow">
-                        <button class="calcButton">4</button>
-                        <button class="calcButton">5</button>
-                        <button class="calcButton">6</button>
+                        <button class="calcButton number">4</button>
+                        <button class="calcButton number">5</button>
+                        <button class="calcButton number">6</button>
                         <button class="calcButton operator">-</button>
                     </div>
 
                     <div class="buttonRow">
-                        <button class="calcButton">1</button>
-                        <button class="calcButton">2</button>
-                        <button class="calcButton">3</button>
+                        <button class="calcButton number">1</button>
+                        <button class="calcButton number">2</button>
+                        <button class="calcButton number">3</button>
                         <button class="calcButton operator">+</button>
                     </div>
 
                     <div class="buttonRow">
-                        <button class="calcButton">0</button>
+                        <button class="calcButton number">0</button>
                         <button class="calcButton">.</button>
                         <button class="calcButton">.00</button>
-                        <button class="calcButton operator">=</button>
+                        <button class="calcButton operator showAns">=</button>
                     </div>
 
                 </div>
