I have to add lower and upper panel for answers

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
         <div class="calcContainer">
             <div class="glass">
                 <div class="answerPanel">
-                   
-                    
+
+                    <div class="wholeExpression">
+
+                    </div>
+
+                   <div class="operationArea">
+
+                   </div>
                 </div>
 
                 <div class="separator">
