solved overflow by adding scrollbar, have to add some functionality to some buttons

--- a/index.html
+++ b/index.html
@@ -19,14 +19,10 @@
         <div class="calcContainer">
             <div class="glass">
                 <div class="answerPanel">
+                    <div class="answerWrapper"></div>
 
-                    <div class="wholeExpression">
+                   
 
-                    </div>
-
-                   <div class="operationArea">
-
-                   </div>
                 </div>
 
                 <div class="separator">
