fix power button and make . to be used once, and visual stuff

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 <div class="buttonPanel">
                     <div class="buttonRow">
-                        <button class="material-symbols-outlined calcButton action">
+                        <button class="material-symbols-outlined calcButton action del">
                         backspace
                         </button>
 
@@ -65,7 +65,7 @@
                     <div class="buttonRow">
                         <button class="calcButton number">0</button>
                         <button class="calcButton">.</button>
-                        <button class="calcButton">.00</button>
+                        <button class="calcButton operator unary">^</button>
                         <button class="calcButton operator showAns">=</button>
                     </div>
 
